# ppt-compress

./: README.md  build_app.sh  pyproject.toml  requirements.txt  run_gui.py  setup.py
pptx_compressor/: __init__.py  __main__.py  cli.py  config.py  gui.py
pptx_compressor/core/: __init__.py  compressor.py  pptx.py  report.py
pptx_compressor/core/passes/: __init__.py  animation_paths.py  base.py  hidden_slides.py  image_compression.py  orphan_graphics.py  orphan_media.py  thumbnails.py  unused_fonts.py
tests/: test_compress_e2e.py
