[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-compressor"
version = "1.0.0"
description = "Offline PPTX compressor for macOS (shrinks images, removes hidden slides / orphan media / unused fonts / thumbnails)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "pptx-compressor" }]
license = "MIT"
dependencies = [
    "Pillow>=10.0.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "PySide6>=6.5.0",
]

[project.scripts]
pptx-compress = "pptx_compressor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pptx_compressor*"]
